added waffles and yeast rolls recipes pages with images and instructions

--- a/recipes/smokedSausageFritatta.html
+++ b/recipes/smokedSausageFritatta.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasagna</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sausage Fritatta</title>
 </head>
+
 <body>
     <h1>Smoked Sausage Fritatta</h1>
+    <img src="/images/smokeSausageFritatta.jfif" alt="" />
+    <h3>Description</h3>
+    <p>
+        A easy to make breakfast fritatta. You can use any mix of ingredients to
+        complete this fritatta and add your own personal touch
+    </p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 1/2 cups smoke sausage</li>
+        <li>1/4 cup diced onion</li>
+        <li>6 eggs</li>
+        <li>1/2 cup milk</li>
+        <li>1/4 sour cream</li>
+        <li>salt and pepper to taste</li>
+        <li>1 1/2 cups shredded cheddar cheese divided</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Preheat an oven to 400 degrees F (200 degrees C).</li>
+        <li>
+            Cook the sausage and onion in an oven-proof skillet over medium heat
+            until the sausage has browned, about 10 minutes. Drain excess grease
+            from the skillet. Whisk together the eggs, milk, sour cream, salt, and
+            pepper. Sprinkle the sausage with 1 cup of the Cheddar cheese, then pour
+            the egg mixture overtop.
+        </li>
+        <li>
+            Bake in the preheated oven until a knife inserted into the center comes
+            out clean, about 18 minutes. Sprinkle with the remaining Cheddar cheese,
+            and return to the oven until the cheese has melted. Cut into wedges to
+            serve.
+        </li>
+    </ol>
 </body>
+
 </html>
