--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
 </head>
+
 <body>
     <h1>Odin Recipes</h1>
-    <a href="/recipes/smokedSausageFritatta.html">Lasagna</a>
+    <a href="/recipes/smokedSausageFritatta.html">Fritatta</a>
+    <a href="/recipes/yeastRolls.html">Yeast Rolls</a>
+    <a href="/recipes/waffles.html">Waffles</a>
+
+
 </body>
+
 </html>
